- (while) and (until) naked blocks allowed (YAM). 
- (exit (QUIET)) is now (always) totally silent.
- WB invocation fixed (project / tool / SCRIPT tooltype).
- Graphical parser feedback when invoked from WB.

0.1.0-alpha.4:
==============
- WB invocation fix fixed.

0.1.0-alpha.5:
==============
- Strict mode toggle (@strict 0/1) 
- (foreach) naked blocks allowed (FlexCat)

0.1.0-alpha.6:
==============
- (copylib) non strict mode (OpenURL) 
- Naked (welcome) (HWP_*)

0.1.0-alpha.7:
==============
- Single argument / multiple options permutations allowed (HWP_*)

0.1.0-alpha.8:
==============
- (exit) option permutations (MetalWeb)
- (prompt) and (help) non strict mode (MetalWeb).
- (getversion) non strict mode (MetalWeb).
- (run) non strict mode (MetalWeb).

0.1.0-alpha.9:
==============
- (fileonly) non strict mode (amrss).
- (copylib) non strict mode (amrss).
- Ambiguous function call / format string allowed in non string mode (amrss).

0.1.0-alpha.10:
===============
- Multiple (command):s allowed in (startup) (MUI5).
- Allow empty (if) statements (amrss).
- Allow dynamic options (IBrowse).

0.1.0-alpha.11:
===============
- Merge (run), (execute) and (rexx) children (NetSurf).
- File lister garbage fixed.

0.1.0-alpha.12:
===============
- (user) turned into a real function returning the old value when set (AWebJFIF).
- Ambiguous function call / format string fix (amrss).

0.1.0-alpha.13:
===============
- Empty procedures allowed (MCC_Date).
- (select) block execution fixed.
- (onerror) and (trap) naked blocks allowed. 

0.1.0-alpha.14:
===============
- (textfile) multiple (append) allowed (NetSurf).
- (AND) and (OR) >2 arguments allowed (MCC_Date).
- Primitives allowed to mimic return values at the end of control blocks (MCC_Date). 

0.1.0-alpha.15:
===============
- Default (welcome) and (exit) fix.
- Debug mode toggle (@debug 0/1) 
- String delimiter fix.

0.1.0-alpha.16:
===============
- (askchoice) control sequence filter.