@@ -1,3 +1,10 @@
+(askoptions (prompt "p") (help "h") (default 3) (choices (if (IN %1110 0) (cat "A") ("B")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phB3 3",""
+(askoptions (prompt "p") (help "h") (default 2) (choices (if (IN %1111 0) (cat "A") ("B")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phA2 2",""
+(askoptions (prompt "p") (help "h") (default 2) (choices (if (IN %1110 0) (cat "A") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phC2 2",""
+(askoptions (prompt "p") (help "h") (default 2) (choices (if (IN %1110 0) ("") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phC2 2",""
+(askoptions (prompt "p") (help "h") (default 1) (choices (if (IN %1110 0) (cat "A") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phC1 1",""
+(askoptions (prompt "p") (help "h") (default 1) (choices (if (IN %1110 0) ("") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phC1 1",""
+(askoptions (prompt "p") (help "h") (default 3) (choices (if (IN %1110 0) "" "") (if (IN %1111 1) "" ""))) ; "","3",""
 (set x "y") (askchoice (prompt "p" "p" x) (help "h" "h" "h") (choices "a" "b" "c")) ; "","ppyhhha0 0",""
 (set x "y") (askchoice (prompt "p" "p" (x)) (help "h" "h" "h") (choices "a" "b" "c")) ; "","Line 1: Undefined function 'x' 0",""
 (set @strict 0) (set x "y") (askchoice (prompt "p" "p" (x)) (help "h" "h" "h") (choices "a" "b" "c")) ; "","ppyhhha0 0",""
@@ -13,6 +20,8 @@
 (askchoice (prompt "p") (help "h") (choices "a" "b" "c")) ; "","pha0 0",""
 (askchoice (prompt "p") (help "h") (choices "a")) ; "","pha0 0",""
 (askchoice (prompt "p") (help "h") (choices "a" "b" "c") (default 1)) ; "","pha1 1",""
+(askchoice (prompt "p") (help "h") (choices "a" "b" "c") (default -1)) ; "","Line 1: No such item '-1' 0",""
+(askchoice (prompt "p") (help "h") (choices "a" "b" "c") (default 3)) ; "","Line 1: No such item '3' 0",""
 (askchoice (prompt "p") (help "h") (choices "a" "b" "c") (default 4)) ; "","Line 1: No such item '4' 0",""
 (askchoice (prompt "p") (help "h") (choices)) ; "","Line 1: syntax error, unexpected ')' ')'",""
 (askchoice (prompt) (help "h") (choices "a")) ; "","Line 1: syntax error, unexpected ')' ')'",""
@@ -25,9 +34,11 @@
 (set r (askchoice (prompt "p") (help "h") (choices "b" "c" "d") (default 2))) (+ r 1) ; "","phb2 3",""
 (askchoice (prompt p) (help "h") (choices "b" "c" "d") (default 2)) ; "","Line 1: Undefined variable 'p' 0",""
 (askchoice (prompt "p") (help h) (choices "b" "c" "d") (default 2)) ; "","Line 1: Undefined variable 'h' 0",""
-(askchoice (prompt "p") (help "h") (choices b "c" "d") (default 2)) ; "","Line 1: Undefined variable 'b' Line 1: No such item '2' 0",""
+(askchoice (prompt "p") (help "h") (choices b "c" "d") (default 2)) ; "","Line 1: Undefined variable 'b' 0",""
 (askchoice (prompt "p") (help "h") (choices "b" "c" "d") (default d)) ; "","Line 1: Undefined variable 'd' 0",""
 (set @strict 0) (askchoice (prompt p) (help "h") (choices "b" "c" "d") (default 2)) ; "","hb2 2",""
 (set @strict 0) (askchoice (prompt "p") (help h) (choices "b" "c" "d") (default 2)) ; "","pb2 2",""
-(set @strict 0) (askchoice (prompt "p") (help "h") (choices b "c" "d") (default 2)) ; "","Line 1: No such item '2' 0",""
+(set @strict 0) (askchoice (prompt "p") (help "h") (choices b "c" "d") (default 2)) ; "","phc2 2",""
+(set @strict 0) (askchoice (prompt "p") (help "h") (choices "b" "c" d) (default 2)) ; "","phb2 2",""
+(set @strict 0) (askchoice (prompt "p") (help "h") (choices b c d) (default 2)) ; "","2",""
 (set @strict 0) (askchoice (prompt "p") (help "h") (choices "b" "c" "d") (default d)) ; "","phb0 0",""
