@@ -7,6 +7,10 @@
 (set a (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 3))) (- a 0) ; "","pha3 3",""
 (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 7)) ; "","pha7 7",""
 (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 8)) ; "","Line 1: No such item '8' 0",""
+(askoptions (prompt "p") (help "h") (choices "a" "b" "") (default 4)) ; "","pha4 4",""
+(askoptions (prompt "p") (help "h") (choices "" "b" "c") (default 4)) ; "","phb4 4",""
+(askoptions (prompt "p") (help "h") (choices (if 0 "a" "") (if 1 "b") "c") (default 4)) ; "","phb4 4",""
+(askoptions (prompt "p") (help "h") (choices "" "" "") (default 4)) ; "","4",""
 (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default)) ; "","Line 1: syntax error, unexpected ')' ')'",""
 (message (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 7))) ; "","pha7 71",""
 (debug (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 7))) ; "","pha7 7 1",""
