@@ -10,6 +10,7 @@
 (select 0 ((message ("%s%s" "abc" "def")) (debug (+1))) "abc" "def") ; "","abcdef1 1",""
 (select 1 "abc" "def") ; "","def",""
 (select 2 "abc" "def") ; "","Line 1: No such item '2' 0",""
+(select 3 "abc" "def") ; "","Line 1: No such item '3' 0",""
 (select -1 "abc" "def") ; "","Line 1: No such item '-1' 0",""
 (set a 1) (select 0 a 2) ; "","1",""
 (select 1 "abc" (database "cpu") "def") ; "","x86_64",""
