@@ -82,4 +82,5 @@
 
 0.1.0-alpha.16:
 ===============
-- (askchoice) control sequence filter.
+- (askchoice) and (askoptions) control sequence filter.
+- (askchoice) and (askoptions) invisible item default value fix.
